# motion.mcu.icm42670p.driver

./: CMakeLists.txt  CODEOWNERS  LICENSE.txt  README.md
.github/ISSUE_TEMPLATE/: default-issue-template.md
examples/: system_interface.c  system_interface.h
examples/Invn/: InvError.h
examples/eis/: README.md  eis.c
examples/freefall/: README.md  freefall.c
examples/pedometer/: README.md  pedometer.c
examples/raw/: README.md  raw.c
examples/selftest/: README.md  selftest.c
examples/smd/: README.md  smd.c
examples/tilt/: README.md  tilt.c
examples/wom/: README.md  wom.c
